--- a/portfolio.html
+++ b/portfolio.html
@@ -5,34 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфоліо</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body class="page">
     <!-- верхня лінія -->
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
-                <ul class="nav-list list">
-                    <li><a class="nav-link" href="./index.html">Студія</a></li>
-                    <li><a class="nav-link current" href="./portfolio.html">Портфоліо</a></li>
-                    <li><a class="nav-link" href="">Контакти</a></li>
+                <a class="logo" href="./index.html"><span class="logo__web">Web</span>Studio</a>
+                <ul class="nav__list">
+                    <li><a class="nav__link" href="./index.html">Студія</a></li>
+                    <li><a class="nav__link nav__link--current" href="./portfolio.html">Портфоліо</a></li>
+                    <li><a class="nav__link" href="">Контакти</a></li>
                 </ul>
             </nav>
-            <div class="connect">
-                <a class="connect-link mail" href="mailto:info@devstudio.com">
-                    <svg class="connect-icon" width="16" height="12">
+            <div class="contact">
+                <a class="contact__link" href="mailto:info@devstudio.com">
+                    <svg class="contact__icon" width="16" height="12">
                         <use href="./images/icons.svg#envelope"></use>
                     </svg>
                     info@devstudio.com
                 </a>
-                <a class="connect-link tel" href="tel:+380961111111">
-                    <svg class="connect-icon" width="12" height="16">
+                <a class="contact__link" href="tel:+380961111111">
+                    <svg class="contact__icon" width="12" height="16">
                         <use href="./images/icons.svg#smartphone"></use>
                     </svg>
                     +38 096 111 11 11
@@ -44,7 +43,7 @@
     <main>
        <section class="section">
         <div class="container">
-        <h1 class="none-title">Портфоліо</h1>
+        <h1 class="section__title--none">Портфоліо</h1>
         <!-- фільтри -->
         <ul class="filter-list">
             <li class="filter-item">
@@ -140,20 +139,20 @@
         <footer class="footer">
             <div class="container">
                 <div>
-                    <a class="footer-logo logo" href="./index.html">
-                        <span class="web">Web</span>Studio
+                    <a class="logo logo--white" href="./index.html">
+                        <span class="logo__web">Web</span>Studio
                     </a>
-                    <address class="footer-address">
+                    <address>
                         <ul class="footer-list">
-                            <li class="footer-item">
-                                <a class="footer-link link-map" href="https://goo.gl/maps/a3HrU5DjRMzzxMnA7" target="_blank"
+                            <li class="footer-list__item">
+                                <a class="footer-list__link link-map" href="https://goo.gl/maps/a3HrU5DjRMzzxMnA7" target="_blank"
                                     rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
                             </li>
-                            <li class="footer-item">
-                                <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                            <li class="footer-list__item">
+                                <a class="footer-list__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                             </li>
-                            <li class="footer-item">
-                                <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                            <li class="footer-list__item">
+                                <a class="footer-list__link" href="tel:+380961111111">+38 096 111 11 11</a>
                             </li>
                         </ul>
                     </address>
