--- a/index.html
+++ b/index.html
@@ -444,17 +444,11 @@
                     <textarea class="form-comment" name="comment" rows="5" id="comment" placeholder="Введіть текст"></textarea>
                     
                     <div class="terms">
-                        <!-- <svg class="form-icon-check-off" width="16" height="15">
-                            <use class="form-icon-check-off" href="./images/icons.svg#check-off"></use>
-                        </svg>
-                        <svg class="form-icon-check-on" width="16" height="15">
-                            <use href="./images/icons.svg#check-on"></use>
-                        </svg> -->
-                        <svg class="form-icon-check" width="11" height="8">
-                            <use href="./images/icons.svg#check"></use>
-                        </svg>
-                        <label class="check">
-                            <input class="check__input" type="checkbox" name="terms" checked/>
+                            <input class="check__input" type="checkbox" name="terms" id="check" checked />
+                        <label class="check" for="check">
+                            <svg class="form-icon-check" width="11" height="8">
+                                <use href="./images/icons.svg#check"></use>
+                            </svg>
                             <span class="terms-text">Погоджуюсь з розсилкою та приймаю</span>
                         </label>
                         <a class="terms-link" href="#">Умови договору</a>
