--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
         <section class="section-hero section">
             <div class="container">
             <h1 class="section-hero__title">ефективні рішення для <br> вашого бізнесу</h1>
-            <button class="section-hero__btn" type="button" data-modal-open>Замовити послугу</button>
+            <button 
+            class="section-hero__btn" 
+            type="button" 
+            data-modal-open>
+            Замовити послугу
+            </button>
             </div>
         </section>
         <!-- Інфо -->
